fix migrated data default alignament and search icon, fix #448

--- a/header-footer-grid/assets/scss/style.scss
+++ b/header-footer-grid/assets/scss/style.scss
@@ -116,3 +116,7 @@
   display: flex;
   margin: 4px 0;
 }
+
+.nv-html-content p {
+  margin: 0;
+}
